# mageflow

./: .coderabbit.yaml  .gitignore  .gitleaks.toml  .mcp.json  CHANGELOG.md  MARKET_ANALYSIS.md  MERGE_BLOCK_ANALYSIS.md  README.md  SOLUTION_INSTRUCTIONS.md  mkdocs.yml  osv-scanner.toml  pyproject.toml  renovate.json  tox.ini
libs/mage-voyance/: pyproject.toml
libs/mage-voyance/integration/frontend/: conftest.py  seed_test_data.py  start_server_with_redis.py  test_server_api.py  test_server_api_edge_cases.py
libs/mage-voyance/integration/server/: test_auth_middleware.py  test_readiness.py  test_server_api.py  test_stdin_reader.py
libs/mage-voyance/tests/: test_readiness.py  test_stdin_reader.py
libs/mage-voyance/visualizer/: __init__.py  __main__.py  commands.py  models.py  server.py
libs/mageflow/: pyproject.toml  settings.toml  tox.ini
libs/mageflow-e2e/: pyproject.testcontainers.toml  pyproject.toml  tox.ini
libs/mageflow-e2e/myapp/: alt_client.py  client.py  init.py  utils.py
libs/mageflow-e2e/tests/: test_chain_dispatch.py  test_clean_state.py  test_marker_override.py  test_swarm_dispatch.py  test_task_dispatch.py  test_workflow_dispatch.py
libs/mageflow-mcp/: pyproject.toml
libs/mageflow-mcp/mageflow_mcp/: __init__.py  models.py  server.py
libs/mageflow-mcp/mageflow_mcp/adapters/: base.py  hatchet.py
libs/mageflow-mcp/mageflow_mcp/tools/: __init__.py  containers.py  logs.py  registry.py  signatures.py
libs/mageflow-mcp/tests/integration/: conftest.py  models.py  test_containers.py  test_logs.py  test_registry.py  test_signatures.py  worker.py
libs/mageflow-mcp/tests/unit/: conftest.py  test_adapter.py  test_models.py
libs/mageflow-mcp/tests/unit/adapters/: test_hatchet_adapter.py
libs/mageflow-mcp/tests/unit/tools/: test_containers.py  test_logs.py  test_registry.py  test_signatures.py
libs/mageflow/mageflow/: __init__.py  callbacks.py  client.py  config.py  init.py  startup.py  workflows.py
libs/mageflow/mageflow/chain/: messages.py  workflows.py
libs/mageflow/mageflow/clients/: __init__.py  inner_task_names.py
libs/mageflow/mageflow/clients/hatchet/: adapeter.py  adapter.py  mageflow.py  messages.py  workflow.py
libs/mageflow/mageflow/invokers/: base.py  hatchet.py
libs/mageflow/mageflow/lifecycle/: signature.py  task.py
libs/mageflow/mageflow/signature/: creator.py
libs/mageflow/mageflow/swarm/: consts.py  creator.py  messages.py  workflows.py
libs/mageflow/mageflow/testing/: __init__.py  _adapter.py  _config.py  _redis.py  plugin.py
libs/mageflow/mageflow/utils/: mageflow.py  pythonic.py
libs/mageflow/mageflow/visualizer/: commands.py
libs/mageflow/tests/integration/: conftest.py  test_redis_ttl.py
libs/mageflow/tests/integration/frontend/: conftest.py  test_server_api.py
libs/mageflow/tests/integration/hatchet/: assertions.py  conftest.py  docker-compose.hatchet.yml  models.py  test_complex_scenarios.py  test_complex_scerios.py  test_retry_cache.py  test_task_models.py  test_ttl.py  worker.py
libs/mageflow/tests/testing/: conftest.py  test_chain_dispatch.py  test_integration_user_workflow.py  test_swarm_dispatch.py  test_task_dispatch.py
libs/mageflow/tests/unit/: assertions.py  conftest.py  signature_compat_helpers.py  test_client.py  test_client_signature_compatibility.py  test_param_config.py  test_remove_ttl.py  test_ttl_config.py  test_ttl_validation.py  test_workflow_sign.py  test_workflow_signature_compatibility.py  utils.py
libs/mageflow/tests/unit/actions/: test_config.py
libs/mageflow/tests/unit/callbacks/: conftest.py  test_handle_task_callback.py  test_retry_cache.py
libs/mageflow/tests/unit/clients/: test_hatchet_adapter.py  test_mage_workflow.py  test_workflow_dispatch.py
libs/mageflow/tests/unit/idempotency/: conftest.py  test_chain_workflows_idempotent.py  test_fill_running_tasks_idempotent.py  test_fill_workflow_running_tasks_idempotent.py  test_swarm_item_done_idempotent.py  test_swarm_item_failed_idempotent.py  test_workflow_hooks_idempotent.py
libs/mageflow/tests/unit/publish/: test_chain_signature_publish.py  test_swarm_signature_publish.py  test_task_signature_publish.py
libs/mageflow/tests/unit/race_condition/: test_fill_running_tasks.py
libs/mageflow/tests/unit/race_conditions/: conftest.py  test_add_while_fill.py  test_close_while_add.py  test_double_completion.py  test_double_fill.py  test_double_finish.py  test_fail_count_race.py  test_finish_while_fill.py  test_full_lifecycle_race.py  test_suspend_while_fill.py
libs/mageflow/tests/unit/testing/: conftest.py  test_chain_dispatch.py  test_integration_user_workflow.py  test_swarm_dispatch.py  test_task_dispatch.py  test_workflow_dispatch.py
libs/mageflow/tests/unit/workflows/: conftest.py  test_chain_end.py  test_chain_error.py  test_completion_hooks.py  test_fill_running_tasks.py  test_fill_swarm_corrupted_callbacks.py  test_fill_swarm_running_tasks.py  test_swarm_item_done.py  test_swarm_item_failed.py  test_swarm_start_tasks.py  test_workflow_composition.py  test_workflow_decorator.py  test_workflow_dispatch_path.py
libs/third-magic/: pyproject.toml
libs/third-magic/tests/unit/: assertions.py  conftest.py  messages.py  test_config.py  utils.py
libs/third-magic/tests/unit/change_status/: assertions.py  conftest.py  test_chain.py  test_signature.py  test_swarm.py
libs/third-magic/tests/unit/creation/: conftest.py  test_abounded_field.py  test_chain.py  (+6 more)
libs/third-magic/thirdmagic/: __init__.py  client.py  consts.py  container.py  errors.py  message.py  task_def.py  utils.py
libs/third-magic/thirdmagic/chain/: __init__.py  creator.py  model.py
libs/third-magic/thirdmagic/clients/: __init__.py  base.py  hatchet.py  inner_task_names.py  lifecycle.py
libs/third-magic/thirdmagic/signature/: __init__.py  creator.py  model.py  retry_cache.py  status.py
libs/third-magic/thirdmagic/signatures/: chain.py  container.py  siganture.py  swarm.py
libs/third-magic/thirdmagic/swarm/: __init__.py  consts.py  creator.py  model.py  state.py
libs/third-magic/thirdmagic/task/: __init__.py  creator.py  model.py
(+432 files in other folders)
