[project]
name = "mage-voyance"
version = "0.1.0"
description = "Mageflow Viewer - Desktop backend server for task visualization"
authors = [
    {name = "imaginary-cherry", email = "yedidyakfir@gmail.com"}
]
license = {text = "MIT"}
requires-python = ">=3.10,<3.14"
dependencies = [
    "thirdmagic>=0.0.4,<0.1.0",
    "rapyer>=1.2.5,<1.3.0",
    "pydantic>=2.0.0,<3.0.0",
    "uvicorn>=0.34.0,<1.0.0",
    "fastapi>=0.115.0,<1.0.0",
    "click>=8.0.0,<9.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0.2,<10.0.0",
    "pytest-asyncio>=1.2.0,<2.0.0",
]

[tool.uv.sources]
thirdmagic = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["visualizer"]
