[project]
name = "mageflow-e2e"
version = "0.1.0"
description = "End-to-end tests for the mageflow testing API from an external user perspective"
requires-python = ">=3.10,<3.14"
dependencies = [
    "mageflow",
    "fakeredis[json,lua]>=2.34.0,<3.0.0",
    "pytest>=9.0.2,<10.0.0",
    "pytest-asyncio>=1.2.0,<2.0.0",
]

[tool.uv.sources]
mageflow = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["myapp"]

[tool.mageflow.testing]
client = "myapp.client:mf"
backend = "fakeredis"

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "session"
