[project]
name = "mageflow-mcp"
version = "0.1.0"
description = "MCP server for mageflow workflow observability"
authors = [
    {name = "imaginary-cherry", email = "yedidyakfir@gmail.com"}
]
license = {text = "MIT"}
requires-python = ">=3.10,<3.14"
dependencies = [
    "mcp>=1.26.0,<2.0.0",
    "pydantic>=2.11.0,<3.0.0",
    "thirdmagic",
    "httpx>=0.27.1,<1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0.2,<10.0.0",
    "pytest-asyncio>=1.2.0,<2.0.0",
    "fakeredis[json,lua]>=2.34.0,<3.0.0",
    "mcp[cli]>=1.26.0,<2.0.0",
    "black>=26.1.0",
]

[project.scripts]
mageflow-mcp = "mageflow_mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["mageflow_mcp"]

[tool.uv.sources]
thirdmagic = { workspace = true }
