[project]
name = "mageflow-mcp"
version = "0.1.0"
description = "MCP server for mageflow workflow observability"
authors = [
    {name = "imaginary-cherry", email = "yedidyakfir@gmail.com"}
]
license = {text = "MIT"}
requires-python = ">=3.10,<3.14"
keywords = [
    "mcp",
    "mageflow",
    "workflow",
    "observability",
    "task-orchestration",
    "hatchet",
    "model-context-protocol",
    "ai-tools",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Framework :: AsyncIO",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Distributed Computing",
    "Typing :: Typed",
    "Operating System :: OS Independent",
]
dependencies = [
    "mcp>=1.26.0,<2.0.0",
    "pydantic>=2.11.0,<3.0.0",
    "thirdmagic>=0.0.1",
    "rapyer>=1.2.3,<1.3.0",
    "httpx>=0.27.1,<1.0.0",
]

[project.optional-dependencies]
hatchet = [
    "hatchet-sdk>=1.22.5,<1.24.0"
]
dev = [
    "pytest>=9.0.2,<10.0.0",
    "pytest-asyncio>=1.2.0,<2.0.0",
    "fakeredis[json,lua]>=2.34.0,<3.0.0",
    "mcp[cli]>=1.26.0,<2.0.0",
    "black>=26.1.0",
    "coverage>=7.0",
]
integration = [
    "mageflow",
    "hatchet-sdk>=1.22.5,<1.24.0",
    "psutil>=7.1.3,<8.0.0",
    "requests>=2.32.5,<3.0.0",
    "dynaconf>=3.2.12,<4.0.0",
]

[project.urls]
Homepage = "https://github.com/imaginary-cherry/mageflow"
Documentation = "https://imaginary-cherry.github.io/mageflow/"
Repository = "https://github.com/imaginary-cherry/mageflow"
"Source Code" = "https://github.com/imaginary-cherry/mageflow"
"Bug Tracker" = "https://github.com/imaginary-cherry/mageflow/issues"
"Changelog" = "https://github.com/imaginary-cherry/mageflow/releases"

[project.scripts]
mageflow-mcp = "mageflow_mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["mageflow_mcp"]

[tool.uv.sources]
thirdmagic = { workspace = true }
mageflow = { workspace = true }
