[project]
name = "mageflow"
version = "0.3.5"
description = "Manage Graph Execution Flow - A unified interface for task orchestration across different task managers"
authors = [
    {name = "imaginary-cherry", email = "yedidyakfir@gmail.com"}
]
license = {text = "MIT"}
requires-python = ">=3.10,<3.14"
keywords = [
    "task-orchestration",
    "workflow",
    "task-manager",
    "hatchet",
    "async",
    "redis",
    "task-chain",
    "task-swarm",
    "distributed",
    "microservices",
    "pipeline",
    "graph-execution",
    "workflow-engine",
    "task-queue",
    "python",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Framework :: AsyncIO",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Distributed Computing",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
    "Typing :: Typed",
    "Operating System :: OS Independent",
]
dependencies = [
    "thirdmagic>=0.0.6, <0.1.0",
]

[project.optional-dependencies]
hatchet = [
    "hatchet-sdk>=1.22.5,<1.24.0"
]
dev = [
    "pytest>=9.0.2,<10.0.0",
    "pytest-asyncio>=1.2.0,<2.0.0",
    "psutil>=7.1.3,<8.0.0",
    "requests>=2.33.0,<3.0.0",
    "dynaconf>=3.2.12,<4.0.0",
    "coverage[toml]>=7.0.0,<8.0.0",
    "fakeredis[json,lua]>=2.34.0,<3.0.0",
    "black>=26.1.0",
    "ruff>=0.15.5",
    "testcontainers[redis]>=4.14.0,<5.0.0",
]
testing = [
    "testcontainers[redis]>=4.14.0,<5.0.0",
    "pytest>=9.0.0,<10.0.0",
    "pytest-asyncio>=1.2.0,<2.0.0",
    "fakeredis[json,lua]>=2.34.0,<3.0.0",
    "pydantic>=2.0.0,<3.0.0",
    "dynaconf>=3.2.13",
    "psutil>=7.2.2",
]

[project.entry-points.pytest11]
mageflow = "mageflow.testing.plugin"

[project.urls]
Homepage = "https://imaginary-cherry.github.io/mageflow/"
Documentation = "https://imaginary-cherry.github.io/mageflow/"
Repository = "https://github.com/imaginary-cherry/mageflow"
"Source Code" = "https://github.com/imaginary-cherry/mageflow"
"Bug Tracker" = "https://github.com/imaginary-cherry/mageflow/issues"
"Changelog" = "https://github.com/imaginary-cherry/mageflow/releases"

[tool.uv.sources]
thirdmagic = { path = "../third-magic" }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["mageflow"]

[tool.coverage.run]
source = ["mageflow"]
branch = true
concurrency = ["multiprocessing"]
parallel = true
omit = [
    "*/tests/*",
    "*/test_*"
]

[tool.coverage.report]
skip_covered = false
show_missing = true
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "@abstractmethod",
    "@overload"
]

[tool.coverage.html]
directory = "htmlcov"

[tool.mageflow.testing]
# backend = "testcontainers"  # default: uses real Redis via testcontainers (requires Docker)
# backend = "fakeredis"       # alternative: uses fakeredis (no Docker required)

[tool.ruff]
select = ["I", "F401"]

