[project]
name = "thirdmagic"
version = "0.0.1"
description = "Core models and signatures for mageflow task orchestration"
authors = [
    {name = "imaginary-cherry", email = "yedidyakfir@gmail.com"}
]
license = {text = "MIT"}
requires-python = ">=3.10,<3.14"
dependencies = [
    "rapyer>=1.2.3,<1.3.0",
    "pydantic>=2.0.0,<3.0.0",
]
[project.optional-dependencies]
dev = [
    "pytest>=9.0.2,<10.0.0",
    "pytest-asyncio>=1.2.0,<2.0.0",
    "fakeredis[json,lua]>=2.32.1,<3.0.0",
    "coverage[toml]>=7.0.0,<8.0.0",
    "hatchet-sdk>=1.23.0",
    "black>=26.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["thirdmagic"]

[tool.coverage.run]
source = ["thirdmagic"]
branch = true
omit = [
    "*/tests/*",
    "*/test_*"
]

[tool.coverage.report]
skip_covered = false
show_missing = true
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "@abstractmethod",
    "@overload"
]

[tool.coverage.html]
directory = "htmlcov"
